# quant_mvp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
market_data/: api.py  services.py
quant_mvp/: api.py  asgi.py  settings.py  urls.py  wsgi.py
quant_platform/core/adapters/: binance.py
quant_platform/core/domain/: indicators.py  models.py
quant_platform/core/ports/: market_data.py
